# Copyright (C) 2016 Hemmo Nieminen
#
# This file is part of dsac (Data Structures and Alorithms for C).
#
# dsac is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# dsac is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with dsac. If not, see <http://www.gnu.org/licenses/>.

project(
	'dsac',
	'c',
	version : '4.0.0',
	meson_version : '>=0.31.0',
	license : 'GPLv2',
	default_options : [
		'werror=true',
		'warning_level=3',
		'stdsplit=false',
		'c_std=c11'
	]
)

subdir('include')
subdir('src')
subdir('tst')
