# Copyright (C) 2016 Hemmo Nieminen
#
# This file is part of dsac (Data Structures and Alorithms for C).
#
# dsac is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# dsac is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with dsac. If not, see <http://www.gnu.org/licenses/>.

DSAC_INCLUDE = include_directories(meson.current_source_dir())
install_headers(
	[
		'avl_tree.h',
		'bitmap.h',
		'blocking_homogeneous_ring_buffer.h',
		'blocking_ring_buffer.h',
		'condition.h',
		'debug_flags.h',
		'doubly_linked_list.h',
		'fifo.h',
		'flags.h',
		'homogeneous_ring_buffer.h',
		'lifo.h',
		'linked_list.h',
		'lock.h',
		'quicksort.h',
		'ring_buffer.h',
		'search_structure-avl.h',
		'search_structure.h',
		'search_structure-splay.h',
		'splay_tree.h'
	],
)
